feat: Add addBook-modal-func & Revise css

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 body {
-  margin: 0;
+  min-width: 500px;
+  max-width: 1400px;
+  margin: 0 auto;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0 25px;
 }
 
 code {
